Bug 452969.  Drop native theming for controls that inherit user-specified values.  r+sr=dbaron